--- a/layouts/partials/navigators/navbar.html
+++ b/layouts/partials/navigators/navbar.html
@@ -28,13 +28,19 @@
           <a class="nav-link" href="#home">Home</a>
         </li>
         {{- if .Site.Data.sections }}
-          {{- range sort .Site.Data.sections "section.weight" }}
+          <!-- {{- range sort .Site.Data.sections "section.weight" }}
             {{ if and (.section.enable) (.section.showOnNavbar)}}
               <li class="nav-item">
                 <a class="nav-link" href="#{{ replace (lower .section.name) " " "-" }}">{{ .section.name }}</a>
               </li>
             {{ end }}
-          {{- end }}
+          {{- end }} -->
+          <li class="nav-item">
+            <a class="nav-link" href="#about">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#recent-posts">Recent Post</a>
+          </li>  
         {{- end }}
         {{ $hasCustomMenus:= false }}
         {{ if and site.Params.customMenus }}
