--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -15,18 +15,17 @@
   </head>
 
   <body data-spy="scroll" data-target="#TableOfContents" data-offset="80">
-    <div class="container-fluid bg-dimmed wrapper">
+    <div class="container-fluid main-container">
       <!----- ADD NAVBAR --------------->
       {{ block "navbar" . }} {{ end }}
 
-      <!----- ADD SIDEBAR --------------->
-      {{ block "sidebar" . }} {{ end }}
+      <!-- ADD SIDEBAR
+      {{ block "sidebar" . }} {{ end }} -->
 
       <!----- ADD PAGE CONTENT --------->
       {{ block "content" . }} {{ end }}
 
-      <!----- ADD TABLE OF CONTENTS ----------->
-      {{ block "toc" . }} {{ end }}
+      <!--ADD TABLE OF CONTENTS-->
     </div>
 
     <!------- ADD FOOTER ------------>
