--- a/layouts/partials/navigators/navbar-2.html
+++ b/layouts/partials/navigators/navbar-2.html
@@ -1,28 +1,57 @@
-<nav class="navbar navbar-expand-xl top-navbar final-navbar shadow">
+<nav class="navbar navbar-expand-xl top-navbar final-navbar">
   <div class="container">
     {{ $mainLogo:="/assets/images/main-logo.png" }}
     {{ $invertedLogo:="/assets/images/inverted-logo.png" }}
     {{ if .Site.Params.logo.main }}
-      {{ $mainLogo = .Site.Params.logo.main }}
+    {{ $mainLogo = .Site.Params.logo.main }}
     {{ end }}
     {{ if .Site.Params.logo.inverted }}
-      {{ $invertedLogo = .Site.Params.logo.inverted }}
+    {{ $invertedLogo = .Site.Params.logo.inverted }}
     {{ end }}
-      <button class="navbar-toggler navbar-light" id="sidebar-toggler" type="button" onclick="toggleSidebar()">
+    <button class="navbar-toggler navbar-light" id="navbar-toggler" type="button" data-toggle="collapse"
+      data-target="#top-nav-items">
       <span class="navbar-toggler-icon"></span>
     </button>
     <a class="navbar-brand" href="{{ site.BaseURL }}">
       <img src="{{ $mainLogo }}">
       {{- site.Title -}}
     </a>
-    <button class="navbar-toggler navbar-light" id="toc-toggler" type="button" onclick="toggleTOC()">
+    <!-- <button class="navbar-toggler navbar-light" id="sidebar-toggler" type="button" onclick="toggleSidebar()">
       <span class="navbar-toggler-icon"></span>
-    </button>
+    </button> -->
 
     <div class="collapse navbar-collapse" id="top-nav-items">
       <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="{{ .Site.BaseURL }}">Home</a>
+        </li>
+        {{- if .Site.Data.sections }}
+        <li class="nav-item">
+          <a class="nav-link" href="/archives">Archives</a>
+        </li>
+        {{- end }}
+        {{ $hasCustomMenus:= false }}
+        {{ if and site.Params.customMenus }}
+        {{ if gt (len site.Params.customMenus) 0 }}
+        {{ $hasCustomMenus = true }}
+        {{ end }}
+        {{ end }}
+        {{ if (or site.Params.enableBlogPost $hasCustomMenus) }}
+        <div class="dropdown-divider" id="top-navbar-divider"></div>
+        {{ end }}
+        {{ if site.Params.enableBlogPost }}
+        <li class="nav-item">
+          <a class="nav-link" id="blog-link" href="/posts">Posts</a>
+        </li>
+        {{ end }}
+        {{ range site.Params.customMenus }}
+        <li class="nav-item">
+          <a class="nav-link" href="{{ .url }}">{{ .name }}</a>
+        </li>
+        {{ end }}
       </ul>
     </div>
+
   </div>
   <!-- Store the logo information in a hidden img for the JS -->
   <img src="{{ $mainLogo }}" class="d-none" id="main-logo">
